--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "firebase": "^10.11.1",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
@@ -25,7 +26,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-simple-typewriter": "^5.0.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
